fix: filter buttons overlap error in ui

--- a/src/styles/ProductListFilter.css
+++ b/src/styles/ProductListFilter.css
@@ -42,6 +42,15 @@
 	background-image: url(../ico/checkbox-checked.svg);
 }
 
+.product-filter-btns {
+  gap: 15px;
+}
+
+.btn-transparent {
+  background: var(--white-color);
+  border: 2px solid var(--dark-back);
+  color: var(--dark-back);
+}
 
 @media screen and (max-width: 480px) {
   .product-list-category-title img{
